sass/style.scss
@import "normalize";
@import "vars";

/*!
* @license
* MyFonts Webfont Build ID 2709844, 2013-12-17T09:25:41-0500
* 
* The fonts listed in this notice are subject to the End User License
* Agreement(s) entered into by the website owner. All other parties are 
* explicitly restricted from using the Licensed Webfonts(s).
* 
* You may obtain a valid license at the URLs below.
* 
* Webfont: Trade Gothic Pro Condensed #18 by Linotype
* URL: http://www.myfonts.com/fonts/linotype/trade-gothic/pro-condensed-18/
* Licensed pageviews: 250,000
* 
* Webfont: Trade Gothic Pro Bold Condensed #20 by Linotype
* URL: http://www.myfonts.com/fonts/linotype/trade-gothic/pro-bold-condensed-20/
* Licensed pageviews: 500,000
* 
* 
* License: http://www.myfonts.com/viewlicense?type=web&buildid=2709844
* Webfonts copyright: Copyright &#x00A9; 2007 Linotype GmbH, www.linotype.com. All rights reserved. This font software may not be reproduced, modified, disclosed or transferred without the express written approval of Linotype GmbH. Trade Gothic is either a registered trademark
* 
* © 2013 MyFonts Inc
*/

/* @import must be at top of file, otherwise CSS will not work */

@import url("//hello.myfonts.net/count/295954");

@font-face {
    font-family: 'Trade Gothic';
    src: url('../fonts/295954_0_0.eot');
    src: url('../fonts/295954_0_0.eot?#iefix') format('embedded-opentype'),url('../fonts/295954_0_0.woff') format('woff'),url('../fonts/295954_0_0.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Trade Gothic';
    src: url('../fonts/295954_1_0.eot');
    src: url('../fonts/295954_1_0.eot?#iefix') format('embedded-opentype'),url('../fonts/295954_1_0.woff') format('woff'),url('../fonts/295954_1_0.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}

/* ----- Base styles ----- */

* {
    box-sizing: border-box;
    position: relative;
}

body {
    color: #002539;
    font-family: "Trade Gothic";
    font-size: 16px;
    overflow-x: hidden;
    overflow-y: scroll;
}

img {
    height: auto;
    max-width: 100%;
}

a,
a:visited {
    color: #002539;
    text-decoration: none;
}

a:active,
a:hover,
a:focus {
    color: #aaa;
    text-decoration: none;
}

@mixin center { text-align: center; }
.center { @include center; }
@mixin lowercase { text-transform: none; }
.lowercase { @include lowercase; }
@mixin uppercase { text-transform: uppercase; }
.uppercase { @include uppercase; }

/* ----- Header and structure ----- */

nav {
    opacity: 0;
    padding: 20px;
    position: fixed;
    width: 200px;
    z-index: 2;

    @media screen and (max-width: $break) {
        left: 0 !important;
        opacity: 1 !important;
        position: relative;
        width: 100%;
    }

    img {
        display: block;
        margin: 0 auto 10px;
        max-width: 300px;
        width: 100%;
    }

    p {
        clear: both;
        float: left;
        margin: 8px 0 3px;
        
        @media screen and (max-width: $break) {
            float: none;
            text-align: center;
        }
    }

    .current-menu-item {
        a {
            &:active, &:focus, &:hover {
                color: #002539;
            }
            &:after {
                content: " »";
            }
        }
    }
}

.menu {
    list-style-type: none;
    margin: 0;
    padding: 0;
    
    li {
        clear: both;
        float: left;
        text-transform: uppercase;
       
        a {
            display: block;
            padding: 3px 0;
        }

        @media screen and (max-width: $break) {
            float: none;
            text-align: center;
        }
    }
} 

#menu-collections-menu {
    padding-left: 20px;
    @media screen and (max-width: $break) {
        padding-left: 0;
    }
}

/* ----- Images ----- */

#images {
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;

    .admin-bar & {
        top: 32px;
    }

    @media screen and (max-width: $break) {
        display: none;
    }

    [data-display="gallery"] & {

        @media screen and (max-width: $break) {
            display: block;
            height: auto !important;
            position: relative;
            top: 0 !important;
        }

    }
}

.image {
    opacity: 0.2;
    position: absolute;
    transform: translateX(-50%);
    transition: $opacity_transition opacity;

    &.preload {
        opacity: 0 !important;
    }

    &[data-showing="0"] {
        opacity: 1;
    }

    @media screen and (max-width: $break) {
        display: block;
        height: auto !important;
        left: 0 !important;
        margin: 0 auto 5%;
        max-width: 90%;
        opacity: 1 !important;
        position: relative;
        transform: translateX(0);
    }
}

.nexting {
    cursor: e-resize;
}

.preving {
    cursor: w-resize;
}

.nexting,
.preving {
    @media screen and (max-width: $break) {
        cursor: auto;
    }
}

/* ----- Pages ------ */

#container {
    background: #fff;
    padding: 0 40px;
    position: absolute;
    transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    -webkit-transform: translateX(-50%);
    transition: $opacity_transition * 1.5 opacity;
    z-index: 2;

    &.preload,
    [data-display="gallery"] & {
        opacity: 0;
    }

    @media screen and (max-width: $break) {
        min-height: 0 !important;
        left: 0 !important;
        position: relative;
        top: 0 !important;
        transform: translateX(0);
        -ms-transform: translateX(0);
        -webkit-transform: translateX(0);
        width: 100% !important;
    }
}

#content {

    img {
        display: block;
        height: auto;
        margin-bottom: 60px;
        width: 100%;

        &:last-child {
            margin-bottom: 20px;
        }
    }

    @media screen and (max-width: $break) {
        top: 0 !important;
    }

    p:first-child {
        margin-top: 2em;
    }
}

.return-to-top {
    display: none;

    @media screen and (min-width: $break + 1) {
        display: none !important;
    }

    @media screen and (max-width: $break) {
        padding: 0 20px 20px;
        text-align: center;

        &:active, &:hover {
            color: #aaa;
        }
    }
}

